--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -42,11 +42,14 @@
 									h6(ng-show="product.reward") + 紅利 {{product.reward}} 點  
 							td.cart-quantity
 								div.input-group(ng-show="!product.isLimited")
-									select(ng-options="option for option in allow_amount track by option", ng-model="product.quantity", ng-change="updateProductTotal()")
+									select(ng-options="option for option in allow_amount track by option", ng-model="product.quantity", ng-change="updateProductTotal(product['$$hashKey'])")
 								div.input-group(ng-show="product.isLimited") {{product.quantity}}
 
-							td.cart-price.hidden-md.hidden-sm.hidden-xs  $ {{product.price}}
+							td.cart-price.hidden-md.hidden-sm.hidden-xs  
+								| $ {{product.price}}
+								p(ng-repeat="discount_condition in product.discount_condition") 購買{{discount_condition.quantity}}件以上，每件只要{{discount_condition.price}}元
 							td.cart-total $ {{product.quantity * product.price}}
+								p.visible-xs(ng-repeat="discount_condition in product.discount_condition") 購買{{discount_condition.quantity}}件以上，每件只要{{discount_condition.price}}元
 							td.cart-remove
 								span.btn.btn-danger.btn-sm(ng-click="removeProduct(product.model)")
 									i.fa.fa-times.fa-inverse
